@@ -1,3 +1,10 @@
+2002-1-4  Johan Dahlin  <jdahlin@telia.com>
+
+	* src/devhelp-window.c: fix dw_link_clicked prototype.
+
+	* src/book-index.c (book_index_class_init): Only create uri-selected
+	signal once. (doh)
+
 2002-01-01  Johan Dahlin  <jdahlin@telia.com>
 
 	Lots of files, ported to GNOME2
